tests/valid/definite/ListAppend_Valid_1.whiley
void System::main([string] args):
    [int] r = [1,2] + [3,4]
    print str(r)
